# obs-gsheets

./: .gitignore  CONFIGURATION.md  LICENSE.md  README.md  biome.json  config.sample.toml  config.toml  main.py  package.json  pyproject.toml  requirements.txt  tsconfig.json  widget.ui
.github/workflows/: main.yml
src/: config.py  index.ts  loader.py  loader.ts  logger.ts  main.py  updater.ts  utils.ts  websocket.py  websocket.ts  worker.py
types/: config.ts  types.ts
