[project]
name = "obs-gsheets"
version = "0.2.0"
description = "OBS Google Sheets integration."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "idna==3.10",
    "obsws-python==1.8.0",
    "pyside6==6.10.0",
    "pyside6-addons==6.10.0",
    "pyside6-essentials==6.10.0",
    "requests==2.32.5",
    "shiboken6==6.10.0",
    "urllib3==2.5.0",
    "websocket-client==1.9.0",
]